# rules_gn

./: .bazelversion  .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.md  MODULE.bazel  README.md  metadata.bzl  rules_gn.code-workspace
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  release.yml  release_prep.sh
actions/: BUILD.bazel
args/: defs.bzl
docs/: BUILD.bazel  defs.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
gn/: BUILD.bazel  action.bzl  action_foreach.bzl  bundle_data.bzl  config.bzl  copy.bzl  create_bundle.bzl  executable.bzl  expand_template.bzl  extensions.bzl  generated_file.bzl  group.bzl  loadable_module.bzl  providers.bzl  repo.bzl  repositories.bzl  rust_library.bzl  rust_proc_macro.bzl  shared_library.bzl  source_set.bzl  static_library.bzl  switch_toolchain.bzl  tool.bzl  tool_wrapper.bzl  tool_wrapper.in.sh  toolchain.bzl
gn/private/: BUILD.bazel  converters.bzl  file.bzl  resolved_toolchain.bzl  rule_helpers.bzl  substitutions.bzl  toolchains_repo.bzl
gn/tests/: BUILD.bazel  tool_test.bzl  versions_test.bzl
tools/: BUILD.bazel  ninja_wrapper.py
variables/: BUILD.bazel
