# Override http_archive for local testing
local_repository(
    name = "rules_gn",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_gn setup #
######################
# Fetches the rules_gn dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_gn//gn:repositories.bzl", "rules_gn_dependencies")

rules_gn_dependencies()
